<resources>
    <string name="app_name">Hop On Application</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="account">namthse03439@fpt.edu.vn</string>
    <string name="date">22 Oct 2015</string>
    <string name="selected_item">Selected item</string>

    <string-array name="functions">
        <item>Parking Stations</item>
        <item>Current Booking</item>
        <item>History</item>
        <item>Profile</item>
        <item>Log out</item>
    </string-array>

    <string-array name="parkingStations"></string-array>
    <string-array name="currentBooking"></string-array>
    <string-array name="history"></string-array>
    <string-array name="profile"></string-array>
    <string-array name="logout"></string-array>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This application requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings.</string>
    <string name="permission_required_toast">Location permission is required for this application.</string>

    <string name="change">
        <u>change</u>
    </string>

    <string name="parking_station">Parking Station</string>
    <string name="bicycle_brand">Bicycle Brand / Model</string>
    <string name="book_now">Book Now</string>

    <string name="bicycle_feature_1">Bicycle feature 1</string>
    <string name="bicycle_feature_2">Bicycle feature 2</string>
    <string name="bicycle_feature_3">Bicycle feature 3</string>

    <string name="booking_id">Booking ID</string>
    <string name="booking_id_detail">A1234B1234C</string>
    <string name="bicycle">Bicycle</string>
    <string name="bicycle_brand_detail">XW123B</string>
    <string name="pick_up_station">Pick Up Station</string>

    <string name="pick_up_station_address">535 Clementi Road, Singapore, 234235</string>
    <string name="returned_station_address">535 Clementi Road, Singapore, 234235</string>

    <string name="booked_time">Booked Time</string>
    <string name="booked_time_detail">09:30 AM, 2 Aug 2016</string>

    <string name="pick_up_time">Pick up Time</string>
    <string name="return_time">Return Time</string>

    <string name="pick_up_time_detail">11:00 AM, 2 Aug 2016</string>
    <string name="return_time_detail">05:31 PM, 2 Aug 2016</string>

    <string name="return_button">Return</string>
    <string name="unlock_button">Unlock</string>

    <string name="booked">Booked</string>
    <string name="returned">Return</string>
    <string name="pick_up_title">Pick Up</string>
    <string name="summary_title">Summary</string>
    <string name="loan_duration">Loan Duration</string>
    <string name="loan_duration_detail">8 hours 1 minute</string>

    <string name="trip_rate">Rate your trip</string>
    <string name="issues">Any issue with our bicycle? Alert us!</string>
    <string name="issue_0">Break not effective</string>
    <string name="issue_1">Tyre(s) flat</string>
    <string name="issue_2">Chain, gears faulty</string>
    <string name="issue_3">Parts loose/dented/scratched, e.g. basket</string>
    <string name="issue_4">Others</string>

    <string name="comment">Comment</string>
    <string name="submit">Submit</string>

    <string name="pick_up_station_name">Ang Mo Kio</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
