<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_loan_detailed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sonata.hop_on.LoanHistory.LoanDetailedActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/booking_id"
        android:text="@string/booking_id"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/booking_id_detail"
        android:text="@string/booking_id_detail"
        android:textSize="18dp"
        android:textColor="@color/wallet_bright_foreground_holo_light"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/booking_id"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bicycle"
        android:text="@string/bicycle"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/booking_id_detail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bicycle_brand"
        android:textSize="18dp"
        android:text="@string/bicycle_brand"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/bicycle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bicycle_brand_detail"
        android:text="@string/bicycle_brand_detail"
        android:textSize="18dp"
        android:textColor="@color/wallet_bright_foreground_holo_light"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/bicycle_brand"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pick_up_title"
        android:text="@string/pick_up_title"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/bicycle_brand_detail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pick_up_station_address"
        android:text="@string/pick_up_station_address"
        android:textSize="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/pick_up_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/pick_up_station_address"
        android:id="@+id/layout_pickup"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/booked_time"
                android:textSize="16dp"
                android:textColor="@color/wallet_bright_foreground_holo_light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/booked_time_detail"
                android:text="@string/booked_time_detail"
                android:textSize="16dp"
                android:layout_marginTop="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_up_time"
                android:textSize="16dp"
                android:textColor="@color/wallet_bright_foreground_holo_light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pick_up_time_detail"
                android:text="@string/pick_up_time_detail"
                android:textSize="16dp"
                android:layout_marginTop="5dp" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/returned_title"
        android:text="@string/returned"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/layout_pickup"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/return_station_address"
        android:text="@string/returned_station_address"
        android:textSize="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/returned_title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/layout_return"
        android:layout_below="@+id/return_station_address">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/return_time"
            android:textSize="16dp"
            android:textColor="@color/wallet_bright_foreground_holo_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/return_time_detail"
            android:text="@string/return_time_detail"
            android:textSize="16dp"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summary_title"
        android:text="@string/summary_title"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/layout_return"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/summary_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loan_duration"
            android:textSize="16dp"
            android:textColor="@color/wallet_bright_foreground_holo_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loan_duration_detail"
            android:text="@string/loan_duration_detail"
            android:textSize="16dp"
            android:layout_marginTop="5dp" />

    </LinearLayout>


</RelativeLayout>
