<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_current_booking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sonata.hop_on.BicycleBooking.CurrentBookingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/booking_id"
        android:text="@string/booking_id"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/booking_id_detail"
        android:text="@string/booking_id_detail"
        android:textSize="18dp"
        android:textColor="@color/wallet_bright_foreground_holo_light"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/booking_id"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bicycle"
        android:text="@string/bicycle"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/booking_id_detail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bicycle_brand"
        android:textSize="20dp"
        android:text="@string/bicycle_brand"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/bicycle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bicycle_brand_detail"
        android:text="@string/bicycle_brand_detail"
        android:textSize="24dp"
        android:textColor="@color/wallet_bright_foreground_holo_light"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/bicycle_brand"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bicycle_feature_1"
        android:text="@string/bicycle_feature_1"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/bicycle_brand_detail"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bicycle_feature_2"
        android:text="@string/bicycle_feature_2"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/bicycle_feature_1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bicycle_image"
        android:layout_below="@id/bicycle_feature_2"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/image_1"
            android:background="@mipmap/ic_available_station"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />\

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/image_2"
            android:background="@mipmap/ic_available_station"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/image_1" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/image_3"
            android:background="@mipmap/ic_available_station"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/image_1" />\

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pick_up_station"
        android:text="@string/pick_up_station"
        android:textSize="18dp"
        android:textColor="@color/wallet_bright_foreground_holo_light"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/bicycle_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pick_up_station_address"
        android:text="@string/pick_up_station_address"
        android:textSize="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/pick_up_station"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/pick_up_station_address"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/booked_time"
                android:textSize="18dp"
                android:textColor="@color/wallet_bright_foreground_holo_light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/booked_time_detail"
                android:text="@string/booked_time_detail"
                android:textSize="16dp"
                android:layout_marginTop="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_up_time"
                android:textSize="18dp"
                android:textColor="@color/wallet_bright_foreground_holo_light"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pick_up_time_detail"
                android:text="@string/pick_up_time_detail"
                android:textSize="16dp"
                android:layout_marginTop="5dp" />

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_return"
            android:text="@string/return_button"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"/>\

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_unlock"
            android:text="@string/unlock_button"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"/>

    </RelativeLayout>


</RelativeLayout>
