<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        android:id="@+id/cv">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/booking_id_detail"
                android:text="@string/booking_id_detail"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/booking_id_detail"
                android:id="@+id/bicycle_brand"
                android:text="@string/bicycle_brand"
                android:textSize="14dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/bicycle_brand"
                android:layout_toRightOf="@+id/bicycle_brand"
                android:id="@+id/bicycle_brand_detail"
                android:text="@string/bicycle_brand_detail"
                android:textSize="14dp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/booked_title"
                android:text="@string/booked"
                android:textColor="@color/cardview_dark_background"
                android:textSize="14dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/bicycle_brand"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/booked_time_detail"
                android:text="@string/booked_time_detail"
                android:textSize="14dp"
                android:layout_alignBaseline="@+id/booked_title"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/booked_station_address"
                android:text="@string/pick_up_station_address"
                android:textSize="14dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/booked_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returned_title"
                android:text="@string/returned"
                android:textColor="@color/cardview_dark_background"
                android:textSize="14dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/booked_station_address"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returned_time_detail"
                android:text="@string/booked_time_detail"
                android:textSize="14dp"
                android:layout_alignBaseline="@+id/returned_title"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/return_station_address"
                android:text="@string/pick_up_station_address"
                android:textSize="14dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/returned_title"/>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>